.k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataverse-deployment
  labels:
    app: dataverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataverse
  template:
    metadata:
      labels:
        app: dataverse
    spec:
      containers:
      - name: dataverse
        image: 736883081464.dkr.ecr.us-east-2.amazonaws.com/dataverse-platform
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
