.k8/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: nginx
# spec:
#   controller: k8s.io/ingress-nginx
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataverse-ingress
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "dataverse.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dataverse-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - dataverse.example.com
  #   secretName: dataverse-cert
